# toy-mips-simulator-in-800-lines

./: .gitignore  CMakeLists.txt  README.md
include/: assembler.hpp  def.hpp  instr.hpp  simulator.hpp
src/: main.cpp
tests/: asm_sample.cpp  sim_sample.cpp  test_util.hpp
tests/instr/: add.cpp  addi.cpp  addiu.cpp  addu.cpp  and.cpp  andi.cpp  clo.cpp  clz.cpp  div.cpp  divu.cpp  exit.cpp  exit2.cpp  j.cpp  jal.cpp  lb.cpp  lbu.cpp  lh.cpp  lhu.cpp  ll.cpp  lui.cpp  lw.cpp  lwl.cpp  lwr.cpp  madd.cpp  maddu.cpp  msub.cpp  msubu.cpp  mul.cpp  mult.cpp  multu.cpp  nor.cpp  or.cpp  ori.cpp  print_int.cpp  sll.cpp  sllv.cpp  slt.cpp  slti.cpp  sltiu.cpp  sltu.cpp  (+22 more)
